# g-dev

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Game.cpp  Makefile  README.md  cmake_install.cmake  compile_commands.json  main  main.cpp
.github/workflows/: cmake-single-platform.yml  cmake.yml
src/: Game.cpp  Game.h  Player.cpp  Player.h  SwagBall.cpp  SwagBall.h
